# db-service

./: .pylintrc  Dockerfile  README.md  build_docker_and_register.sh  deploy.sh  mypy.ini  pyproject.toml
.github/workflows/: deploy.yaml  linter.yaml
src/db_service/: connect.py  environment.py  service.py  utils.py
src/db_service/actions/: delete_apartments.py  delete_developers.py  delete_projects.py  filter_apartments.py  filter_developers.py  filter_projects.py  insert_apartments.py  insert_developers.py  insert_projects.py  io.py  registry.py  select_apartment_by_ids.py  select_developer_by_ids.py  select_project_by_ids.py  update_apartments.py  update_developers.py  update_projects.py
src/db_service/schema/: apartment.py  developer.py  project.py
