[tool.poetry]
name = "estatex-db-service"
version = "0.1.0"
description = "Service to connect and perform operations on database"
authors = ["anastasia"]
readme = "README.md"

packages = [
    { include = "db_service", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9.11"
rmq-interface = "^1.1"
msgpack = "^1.0.4"
logging = "^0.4.9.6"
black = "^22.12.0"
mypy = "^0.991"
lint = "^1.2.1"
flake8 = "^6.0.0"
pylint = "2.13.0"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
poetry-githooks = "^2.0.0"
dacite = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 110
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.githooks]
pre-commit = "poetry run black src/; poetry run isort src/"
